--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
             <button id="apagar">Apagar</button>
         </div>
     </div>
+
+    <script src="js/lampada.js"></script>
 </body>
 </html>
